<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>prs49_ros366_cpp</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="prs49@aber.ac.uk">prs49</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  	<depend>rclcpp</depend>
	<depend>std_msgs</depend>
	<depend>sensor_msgs</depend>
	<depend>ros366_cv_msgs</depend>
	<depend>rcl_interfaces</depend>
	<depend>cv_bridge</depend>
	<depend>image_transport</depend>
	<depend>tf2</depend>
	<depend>tf2_ros</depend>
	<exec_depend>ros2launch</exec_depend>
	

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
<!--This package is a part of the taught robotic third year module-->
<!--I have added the two depend lines after the buildtool depend line-->
